# trident-terminal-simulation

./: Cargo.toml  README.md
src/: main.rs  pointmass.rs  rope.rs  simulation.rs  simulation_float.rs  vec3.rs
