[package]
name = "trident_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.32"
rug = "1.16.0"
#nalgebra = "0.31.0"
newtype_derive = "0.1.6"
custom_derive = "0.1.7"
stopwatch = "0.0.7"
